--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+<head> <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17873203960"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17873203960');
+</script>
+
+    
     <meta charset="UTF-8">
     <title>Chiaperini Industrial LTDA | Compressores Industriais</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
